@@ -432,12 +432,35 @@ bonpow <- function(graph, nodes=V(graph),
   id <- matrix(0,nrow=n,ncol=n)
   diag(id) <- 1
 
-  ev <- apply(solve(id-exponent*d,tol=tol)%*%d,1,sum)
+#  ev <- apply(solve(id-exponent*d,tol=tol)%*%d,1,sum)
+  ev <- solve(id-exponent*d, tol=tol) %*% apply(d,1,sum)
   if(rescale) {
     ev <- ev/sum(ev)
   } else {
     ev <- ev*sqrt(n/sum((ev)^2))
   } 
+  ev[as.numeric(nodes)+1]
+}
+
+alpha.centrality <- function(graph, nodes=V(graph), alpha=1,
+                             loops=FALSE, exo=1,
+                             tol=1e-7) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object")
+  }
+
+  exo <- rep(exo, length=vcount(graph))
+  exo <- matrix(exo, nc=1)
+
+  d <- t(get.adjacency(graph))
+  if (!loops) {
+    diag(d) <- 0
+  }
+  n <- vcount(graph)
+  id <- matrix(0, nrow=n, ncol=n)
+  diag(id) <- 1
+  
+  ev <- solve(id-alpha*d, tol=tol) %*% exo
   ev[as.numeric(nodes)+1]
 }
 
