@@ -30,7 +30,7 @@ bonpow(graph, nodes=V(graph), loops=FALSE, exponent=1,
 \details{
 Bonacich's power centrality measure is defined by
 \eqn{C_{BP}\left(\alpha,\beta\right)=\alpha\left(\mathbf{I}-\beta\mathbf{A}\right)^{-1}\mathbf{A}\mathbf{1}}{C_BP(alpha,beta)=alpha
-  (I-A)^-1 A 1}, where \eqn{\beta}{beta} is an attenuation parameter
+  (I-beta A)^-1 A 1}, where \eqn{\beta}{beta} is an attenuation parameter
 (set here by \code{exponent}) and \eqn{\mathbf{A}}{A} is the graph
 adjacency matrix.  (The coefficient \eqn{\alpha}{alpha} acts as a
 scaling parameter, and is set here (following Bonacich (1987)) such that
@@ -84,14 +84,14 @@ a non-ad hoc basis.
   will be fixed when I get a better algorithm.  \code{bonpow} will not
   symmetrize your data before extracting eigenvectors; don't send this
   routine asymmetric matrices unless you really mean to do so.} 
-\seealso{ \code{\link{evcent}} }
+\seealso{ \code{\link{evcent}} and \code{\link{alpha.centrality}} }
 \note{ This function was ported (ie. copied) from the SNA package. }
 \examples{
 # Generate some test data from Bonacich, 1987:
 g.c <- graph( c(1,2,1,3,2,4,3,5)-1, dir=FALSE)
 g.d <- graph( c(1,2,1,3,1,4,2,5,3,6,4,7)-1, dir=FALSE)
 g.e <- graph( c(1,2,1,3,1,4,2,5,2,6,3,7,3,8,4,9,4,10)-1, dir=FALSE)
-g.f <- graph( c(1,2,1,3,1,4,2,5,2,6,2,7,3,8,3,9,3,10,4,11,4,12,4,13)-1, dir=F)
+g.f <- graph( c(1,2,1,3,1,4,2,5,2,6,2,7,3,8,3,9,3,10,4,11,4,12,4,13)-1, dir=FALSE)
 # Compute Bonpow scores
 for (e in seq(-0.5,.5, by=0.1)) {
   print(round(bonpow(g.c, exp=e)[c(1,2,4)], 2))
